Fix #44 resolve logo alignment issues

--- a/less/breadcrumb.less
+++ b/less/breadcrumb.less
@@ -1,5 +1,6 @@
 .breadcrumb {
     background-color: #FFFFFF;
+    padding: 8px 16px;
 }
 
 .breadcrumb-button {
