--- a/less/navbar.less
+++ b/less/navbar.less
@@ -10,12 +10,16 @@ img.sitelogo {
     height: 45px;
 }
 
-a.navbar-brand {
-    padding-top: 0;
+.navbar-brand {
+    padding: 0 16px 15px 15px;
     text-decoration: none;
     h1 {
         margin-top: 5px;
     }
+}
+
+.navbar-header {
+    margin-top: 5px;
 }
 
 .navbar-inverse {
