--- a/style/stellar.css
+++ b/style/stellar.css
@@ -17656,11 +17656,14 @@ fieldset[disabled] #rubric-rubric.gradingform_rubric .addcriterion {
 img.sitelogo {
   height: 45px;
 }
-a.navbar-brand {
-  padding-top: 0;
+.navbar-brand {
+  padding: 0 16px 15px 15px;
   text-decoration: none;
 }
-a.navbar-brand h1 {
+.navbar-brand h1 {
+  margin-top: 5px;
+}
+.navbar-header {
   margin-top: 5px;
 }
 .navbar-inverse {
@@ -17709,6 +17712,7 @@ a.navbar-brand h1 {
 }
 .breadcrumb {
   background-color: #FFFFFF;
+  padding: 8px 16px;
 }
 .breadcrumb-button {
   margin-right: 15px;
